--- a/index.css
+++ b/index.css
@@ -97,7 +97,7 @@
 	overflow: hidden;
 	box-sizing: border-box;
 	text-align: center;
-	background: brown;
+	background: #332f28;
 	height: 10vh;
 }
 .f_text{
