--- a/index.css
+++ b/index.css
@@ -84,7 +84,7 @@
 #button_send{
 	width: 200px;
 	height: 35px;
-	background: green;	
+	background: #449d40;	
 	border-radius: 25px;
 	color: white;
 	margin-top: 10px;
@@ -113,17 +113,16 @@
 	float: right;
 	box-sizing: border-box;
 	padding-top: 6px;
-	border-radius: 25px;
+	
 
 }
 #button{
 	width: 200px;
 	height: 35px;
-	background: green;	
+	background: #449d40;	
 	color: white;
 	margin-top: 10px;
-	border-radius: 25px;
-
+	
 }
 .footer{
 	width: 100;
